Add per-page title to template

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OWL Resources</title>
+  <title>{{ page.title }} @ OWL Resources</title>
 </head>
 <body>
   <h1><a href="{{site.url}}">OWL Resources</a></h1>
