Try reducing transparency again (wrong direction before).

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
   <title>{{ page.title }} @ OWL Resources</title>
   <style>
     body {background: url({{ "openwork_pattern_blue.png" | relative_url }});}
-    main {background: #fff7;}
+    main {background: #fffd;}
   </style>
 </head>
 <body><main>
