Move link to logo rather than text.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,8 +10,8 @@
   </style>
 </head>
 <body><main>
-  <h1><img width="32" src="{{ "openwork_avatar_black.png" | relative_url }}" />
-    <a href="{{site.url}}">OWL Resources</a></h1>
+  <h1><a href="{{site.url}}"><img width="32" src="{{ "openwork_avatar_black.png" | relative_url }}" /></a>
+    OWL Resources</h1>
   {{ content }}
 </main></body>
 </html>
