Correct home link.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body><main>
-  <h1><a href="{{site.url}}"><img width="32" src="{{ "openwork_avatar_black.png" | relative_url }}" /></a>
+  <h1><a href="{{site.baseurl}}"><img width="32" src="{{ "openwork_avatar_black.png" | relative_url }}" /></a>
     OWL Resources</h1>
   {{ content }}
 </main></body>
