--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,7 @@
     body {background: url({{ "openwork_pattern_blue.png" | relative_url }});}
     main {background: #fffd;}
   </style>
+  <link rel="icon" src="{{ "openwork_avatar_black.png" | relative_url }}" />
 </head>
 <body><main>
   <h1><a href="{{site.baseurl}}"><img width="32" src="{{ "openwork_avatar_black.png" | relative_url }}" /></a>
