Switch to Aqua for unvisited link color.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
     body {background: url({{ "openwork_pattern_blue.png" | relative_url }}); text-align: center;}
     main {background: #fffd;}
     h1 {font-size: 64px;}
-    a:link {color: #0C3C60;}
+    a:link {color: #00B097;}
     a:active, a:hover {color: #F28507;}
     a:visited {color: #F1B434;}
   </style>
