Move center text-align exclusively to index page.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
 <head>
   <title>{{ page.title }} @ OWL Resources</title>
   <style>
-    body {background: url({{ "openwork_pattern_blue.png" | relative_url }}); text-align: center;}
+    body {background: url({{ "openwork_pattern_blue.png" | relative_url }});}
     main {background: #fffd;}
     h1 {font-size: 64px;}
     a:link {color: #00B097;}
