--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,8 +6,8 @@
   <title>{{ page.title }} @ OWL Resources</title>
   <style>
     body {background: url({{ "openwork_pattern_blue.png" | relative_url }});}
-    main {background: #fffd;}
-    h1 {font-size: 64px;}
+    main {background: #fffd; max-width: 900px; margin: 5px auto;}
+    h1 {font-size: 64px; text-align: center;}
     a:link {color: #00B097;}
     a:visited {color: #F1B434;}
     a:active, a:hover {color: #F28507;}
