--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,10 +7,15 @@
   <style>
     body {background: url({{ "openwork_pattern_blue.png" | relative_url }});}
     main {background: #fffd; max-width: 800px; margin: 5px auto;}
-    h1 {font-size: 64px; text-align: center;}
+    h1 {
+      font-size: 64px; text-align: center;
+      margin: 0; padding: 0;
+    }
     a:link {color: #00B097;}
     a:visited {color: #F1B434;}
     a:active, a:hover {color: #F28507;}
+
+    dd {padding: 10px; padding-right: 0;}
   </style>
   <link rel="icon" src="{{ "openwork_avatar_black.png" | relative_url }}" />
 </head>
